GH-1284 - Fixing alignment of properties on cards (#1875)
* GH-1284 - Fixing alignment of properties on cards

* Updating test

--- a/webapp/src/components/properties/dateRange/dateRange.scss
+++ b/webapp/src/components/properties/dateRange/dateRange.scss
@@ -46,6 +46,7 @@
         width: 100%;
         height: 100%;
         justify-content: left;
+        padding: 0;
 
         &.--empty {
             opacity: 0;
